src/test/ui/const-generics/const-param-type-depends-on-type-param.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-param-type-depends-on-type-param.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0741]: `T` is not guaranteed to `#[derive(PartialEq, Eq)]`, so may not be used as the type of a const parameter
  --> $DIR/const-param-type-depends-on-type-param.rs:9:34
   |
LL | pub struct Dependent<T, const X: T>([(); X]);
   |                                  ^ `T` may not derive both `PartialEq` and `Eq`
   |
   = note: it is not currently possible to use a type parameter as the type of a const parameter

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0741`.
